force-app/main/default/objects/NotificationRule__c/NotificationRule__c.object-meta.xml
<CustomObject>
    <label>Notification Rule</label>
    <listViews>
        <fullName>RecentlyViewed</fullName>
        <columns>Rule_Label__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Trigger_Event__c</columns>
        <columns>Watched_Fields__c</columns>
        <columns>Priority__c</columns>
        <columns>Active__c</columns>
        <filterScope>RecentlyViewed</filterScope>
        <label>Recently Viewed</label>
    </listViews>
    <nameField>
        <displayFormat>NR-{0000}</displayFormat>
        <label>Notification Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>