force-app/main/default/objects/NotificationRule__c/fields/Condition_Class__c.field-meta.xml
<CustomField>
    <fullName>Condition_Class__c</fullName>
    <label>Condition Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>