force-app/main/default/objects/NotificationRule__c/fields/Condition_Config__c.field-meta.xml
<CustomField>
    <fullName>Condition_Config__c</fullName>
    <label>Condition Config</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>