force-app/main/default/objects/NotificationRule__c/fields/Cooldown_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Cooldown_Minutes__c</fullName>
    <label>Cooldown Minutes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>