force-app/main/default/objects/NotificationRule__c/fields/Recipient_Config__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Config__c</fullName>
    <label>Recipient Config</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>