force-app/main/default/objects/NotificationRule__c/fields/Recipient_Resolver_Class__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Resolver_Class__c</fullName>
    <label>Recipient Resolver Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>