force-app/main/default/objects/NotificationRule__c/fields/Recipient_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Strategy__c</fullName>
    <label>Recipient Strategy</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>SpecificUsers</fullName>
            </value>
            <value>
                <fullName>FieldReference</fullName>
            </value>
            <value>
                <fullName>ApexResolver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>