force-app/main/default/objects/NotificationRule__c/fields/Rule_Label__c.field-meta.xml
<CustomField>
    <fullName>Rule_Label__c</fullName>
    <label>Rule Label</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>