force-app/main/default/objects/NotificationRule__c/fields/Watched_Fields__c.field-meta.xml
<CustomField>
    <fullName>Watched_Fields__c</fullName>
    <label>Watched Fields</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>