force-app/main/default/objects/NotificationRule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Rule_Label__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Trigger_Event__c</columns>
    <columns>Watched_Fields__c</columns>
    <columns>Condition_Class__c</columns>
    <columns>Priority__c</columns>
    <columns>Cooldown_Minutes__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>